Fix header name on mobile

--- a/site/assets/scss/components/_header.scss
+++ b/site/assets/scss/components/_header.scss
@@ -1,9 +1,13 @@
 .c-header {
     &_wrapper {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         padding-top: 3rem;
+
+        @include media( '>medium' ) {
+            justify-content: space-between;
+        }
     }
     &_name {
         position: relative;
@@ -49,13 +53,16 @@
         justify-content: center;   
         
         &--langs {
+            display: none;
+            list-style: none;
             margin: 0 4vw 0 5vw;
+            @include media( '>medium' ) {
+                display: flex;
+            }
             @include media( '>large' ) {
                 margin: 0 6vw 0 5vw;
             }
-            display: flex;
-            list-style: none;
-            
+                    
             &_item {
                 &:not(:first-child) {
                     margin: 0 0 0 1vw !important;
